// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container snapshots hotspot color renders 1`] = `
<Container
  classes={
    Object {
      "base": "Container-base-2 base",
      "image": "Container-image-3",
      "imageContainer": "Container-imageContainer-4",
      "resize": "Container-resize-6",
      "stage": "Container-stage-5",
    }
  }
  dimensions={
    Object {
      "height": 0,
      "width": 0,
    }
  }
  disabled={false}
  hotspotColor="rgba(217, 30, 24, 0.65)"
  imageUrl=""
  isEvaluateMode={false}
  onSelectChoice={[MockFunction]}
  outlineColor="blue"
  session={
    Object {
      "answers": Array [],
    }
  }
  shapes={
    Object {
      "polygons": Array [],
      "rectangles": Array [],
    }
  }
/>
`;

exports[`Container snapshots image renders 1`] = `
<Container
  classes={
    Object {
      "base": "Container-base-2 base",
      "image": "Container-image-3",
      "imageContainer": "Container-imageContainer-4",
      "resize": "Container-resize-6",
      "stage": "Container-stage-5",
    }
  }
  dimensions={
    Object {
      "height": 0,
      "width": 0,
    }
  }
  disabled={false}
  hotspotColor="rgba(137, 183, 244, 0.65)"
  imageUrl="https://picsum.photos/id/102/200/300"
  isEvaluateMode={false}
  onSelectChoice={[MockFunction]}
  outlineColor="blue"
  session={
    Object {
      "answers": Array [],
    }
  }
  shapes={
    Object {
      "polygons": Array [],
      "rectangles": Array [],
    }
  }
/>
`;

exports[`Container snapshots outline color renders 1`] = `
<Container
  classes={
    Object {
      "base": "Container-base-2 base",
      "image": "Container-image-3",
      "imageContainer": "Container-imageContainer-4",
      "resize": "Container-resize-6",
      "stage": "Container-stage-5",
    }
  }
  dimensions={
    Object {
      "height": 0,
      "width": 0,
    }
  }
  disabled={false}
  hotspotColor="rgba(137, 183, 244, 0.65)"
  imageUrl=""
  isEvaluateMode={false}
  onSelectChoice={[MockFunction]}
  outlineColor="red"
  session={
    Object {
      "answers": Array [],
    }
  }
  shapes={
    Object {
      "polygons": Array [],
      "rectangles": Array [],
    }
  }
/>
`;

exports[`Container snapshots shapes renders 1`] = `
<Container
  classes={
    Object {
      "base": "Container-base-2 base",
      "image": "Container-image-3",
      "imageContainer": "Container-imageContainer-4",
      "resize": "Container-resize-6",
      "stage": "Container-stage-5",
    }
  }
  dimensions={
    Object {
      "height": 300,
      "width": 200,
    }
  }
  disabled={false}
  hotspotColor="rgba(137, 183, 244, 0.65)"
  imageUrl="https://picsum.photos/id/102/200/300"
  isEvaluateMode={false}
  onSelectChoice={[MockFunction]}
  outlineColor="blue"
  session={
    Object {
      "answers": Array [],
    }
  }
  shapes={
    Object {
      "polygons": Array [
        Object {
          "id": "3",
          "points": Array [
            Object {
              "x": 94,
              "y": 4,
            },
            Object {
              "x": 89,
              "y": 4,
            },
            Object {
              "x": 36,
              "y": 40,
            },
          ],
        },
      ],
      "rectangles": Array [
        Object {
          "height": 5,
          "id": "1",
          "width": 5,
          "x": 5,
          "y": 5,
        },
        Object {
          "height": 5,
          "id": "2",
          "width": 5,
          "x": 25,
          "y": 25,
        },
      ],
    }
  }
/>
`;

exports[`HotspotComponent renders snapshot 1`] = `
<HotspotComponent
  classes={
    Object {
      "collapsible": "HotspotComponent-collapsible-1",
    }
  }
/>
`;

exports[`HotspotComponent renders snapshot with rationale 1`] = `
<HotspotComponent
  classes={
    Object {
      "collapsible": "HotspotComponent-collapsible-1",
    }
  }
  rationale="This is rationale"
/>
`;
